samples/_failures_safe/1761376590_f0ee9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95d1b922.c: In function ‘main’:
./samples/SAFE/__tmp_95d1b922.c:156:5: error: expected expression at end of input
  156 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_95d1b922.c:156:5: error: expected declaration or statement at end of input
